[package]
name = "igtv-downloader"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true

[dependencies]
alphanumeric-sort = "1.4"
anyhow = "1.0"
clap = { version = "3.1", features = [ "derive" ] }
futures = "0.3"
indicatif = "0.17.0-rc.2"
quick-xml = { version = "0.22", features = [ "serialize" ] }
reqwest = { version = "0.11", default-features = false, features = [ "rustls-tls" ] }
serde = { version = "1.0", features = [ "derive" ] }
thiserror = "1.0"
tokio = { version = "1.15", features = [ "full" ] }
