[package]
name = "download-iglive"
version = "0.1.6"
edition = "2021"
license = "GPL-3.0-or-later"

[profile.release]
strip = true

[dependencies]
alphanumeric-sort = "1.5"
anyhow = "1.0"
bitflags = "2.3"
clap = { version = "4.3", features = [ "derive" ] }
futures = "0.3"
indicatif = "0.17.5"
quick-xml = { version = "0.30", features = [ "serialize" ] }
reqwest = { version = "0.11", default-features = false, features = [ "rustls-tls" ] }
serde = { version = "1.0", features = [ "derive" ] }
thiserror = "1.0"
tokio = { version = "1.29", features = [ "full" ] }
